[metadata]
name = Solar Panel Positioning Tool
version = 0.1
author = Alexandre Strube
description = This is an app which should allow you to correctly position your solar panel
long_description = The idea is to build an app where you simply lay your phone on top of a solar panel, and it gives you a proper angle - kinda like the "level" app of iOS
url = https://github.com/surak
keywords = solar panel, renewables, python
[options]
python_requires = >=3.7, <4
install_requires = 
    geocoder
[options.extras_require]
test = 
    pytest
    coverage
